--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   google_fonts: ^6.0.0
   get: ^4.6.5
   pretty_dio_logger: ^1.3.1
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
