--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   dio: ^5.3.2
   hive: ^2.2.3
   google_fonts: ^6.0.0
+  flutter_launcher_icons: ^0.13.0
   get: ^4.6.5
   pretty_dio_logger: ^1.3.1
   intl: ^0.18.1
@@ -23,6 +24,14 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+
+
+flutter_launcher_icons: "^0.13.0"
+flutter_lints: ^2.0.0
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/app_icon.png"
 
 flutter:
 
